--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile project(':baseProject')
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.github.medyo:fancybuttons:1.8.2'
 }
