Added     我的和主页禁止滑动，我的添加了个人信息，信息修改，密码修改，退出登录等

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,15 +25,15 @@
             android:name=".aui.ControlActivity"
             android:label="@string/title_activity_control"></activity>
         <activity
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan"
             android:name=".activity.UserManagerActivity"/>
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize"
             android:name=".activity.DoorControlActivity"/>
         <activity
-            android:windowSoftInputMode="adjustResize"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"
             android:name=".activity.SelectionActivity"/>
     </application>
