--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.3'
     // resourcePrefix 'mpcht'
     defaultConfig {
         minSdkVersion 15
