--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
 
@@ -29,4 +30,6 @@ dependencies {
     compile project(':baseProject')
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.github.medyo:fancybuttons:1.8.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
