--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:theme="@style/AppTheme"
             android:name=".MainActivity"></activity>
         <activity android:name=".MainNewActivity"></activity>
         <activity
@@ -38,6 +39,7 @@
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme"
             android:name=".activity.SelectionActivity"/>
+        <activity android:name=".activity.SettingActivity"/>
     </application>
 
 </manifest>
