--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    //编译之后，jniLibs就出来了
+    sourceSets.main {
+        jniLibs.srcDirs = ['src/main/libs']
+    }
 }
 
 dependencies {
