--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.meiqu.lainmonitor">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
@@ -40,6 +45,8 @@
             android:theme="@style/AppTheme"
             android:name=".activity.SelectionActivity"/>
         <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".hkvideo.RTSPActivity"/>
+        <activity android:name=".hkvideo.SimpleActivity"/>
     </application>
 
 </manifest>
